add validation for user input

--- a/LibraryApp/Pages/BookList/Create.cshtml
+++ b/LibraryApp/Pages/BookList/Create.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model LibraryApp.Pages.BookList.CreateModel
-
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+ 
 <br />
 <h2 class="text-info">Create New Book</h2>
 <br />
