--- a/LibraryApp/Pages/BookList/Edit.cshtml
+++ b/LibraryApp/Pages/BookList/Edit.cshtml
@@ -1,9 +1,8 @@
 ﻿@page
-@model LibraryApp.Pages.BookList.CreateModel
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
- 
+@model LibraryApp.Pages.BookList.EditModel
+
 <br />
-<h2 class="text-info">Create New Book</h2>
+<h2 class="text-info">Edit Book</h2>
 <br />
 
 <div class="border container" style="padding:30px;">
@@ -40,12 +39,12 @@
         </div>
         <div class="form-group row">
             <div class="col-3 offset-3">
-                <input type="submit" value="Create" class="btn btn-primary form-control" />
+                <input type="submit" value="Update" class="btn btn-primary form-control" />
             </div>
             <div class="col-3">
                 <a asp-page="Index" class="btn btn-success form-control">Back to List</a>
             </div>
-        </div> 
+        </div>
     </form>
 
 </div>
@@ -53,3 +52,4 @@
 @section Scripts{
     <partial name="_ValidationScriptsPartial" />
 }
+
