--- a/LibraryApp/Pages/BookList/Index.cshtml
+++ b/LibraryApp/Pages/BookList/Index.cshtml
@@ -49,8 +49,8 @@
                                 @Html.DisplayFor(m => item.ISBN)
                             </td>
                             <td>
-                                <button class="btn btn-danger btn-sm text-white">Delete</button>
-                                <a class="btn btn-success btn-sm">Edit</a>
+                                <button asp-page-handler="Delete" asp-route-id="=@item.Id" onclick="return confirm('Are you sure you want to delete this post?')" class="btn btn-danger btn-sm text-white">Delete</button>
+                                <a asp-page="Edit" asp-route-id="@item.Id" class="btn btn-success btn-sm">Edit</a>
                             </td>
                         </tr>
                     }
