--- a/LibraryApp/Pages/BookList/Index.cshtml
+++ b/LibraryApp/Pages/BookList/Index.cshtml
@@ -10,81 +10,83 @@
         <h2 class="text-info">Book List</h2>
     </div>
     <div class="col-2">
-        <a asp-page="Create" class="btn btn-info form-control text-white">Create new book</a>
+        <a asp-page="Upsert" class="btn btn-info form-control text-white">Create new book</a>
     </div>
-
-    <div class="col-12 border p-3 mt-3">
-        <form method="post">
-            @if (Model.Books.Count() > 0)
-            {
-                <table class="table table-striped border">
-                    <tr class="table-secondary">
-                        <th>
-                            @* Using Tag Helper *@
-                            <label asp-for="Books.FirstOrDefault().Name"></label>
-                        </th>
-                        <th>
-                            @* Using HTML helper
-                                @Html.DisplayNameFor(m=>m.Books.FirstOrDefault().Author) *@
-                            <label asp-for="Books.FirstOrDefault().Author"></label>
-                        </th>
-                        <th>
-                            <label asp-for="Books.FirstOrDefault().ISBN"></label>
-                        </th>
-
-
-                    </tr>
-
-                    @foreach (var item in Model.Books)
+    @*
+            <div class="col-12 border p-3 mt-3">
+                <form method="post">
+                    @if (Model.Books.Count() > 0)
                     {
-                        <tr>
-                            <td>
-                                @* There are no tag helper equivalent to DisplatFor therefor we use HTML-helper. *@
-                                @Html.DisplayFor(m => item.Name)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(m => item.Author)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(m => item.ISBN)
-                            </td>
-                            <td>
-                                <button asp-page-handler="Delete" asp-route-id="=@item.Id" onclick="return confirm('Are you sure you want to delete this post?')" class="btn btn-danger btn-sm text-white">Delete</button>
-                                <a asp-page="Edit" asp-route-id="@item.Id" class="btn btn-success btn-sm">Edit</a>
-                            </td>
-                        </tr>
+                        <table class="table table-striped border">
+                            <tr class="table-secondary">
+                                <th>
+                                    //Using Tag Helper
+                                    <label asp-for="Books.FirstOrDefault().Name"></label>
+                                </th>
+                                <th>
+                                    //Using HTML helper
+                                        //@Html.DisplayNameFor(m=>m.Books.FirstOrDefault().Author)
+                                    <label asp-for="Books.FirstOrDefault().Author"></label>
+                                </th>
+                                <th>
+                                    <label asp-for="Books.FirstOrDefault().ISBN"></label>
+                                </th>
+
+
+                            </tr>
+
+                            @foreach (var item in Model.Books)
+                            {
+                                <tr>
+                                    <td>
+                                         //There are no tag helper equivalent to DisplatFor therefor we use HTML-helper.
+                                        @Html.DisplayFor(m => item.Name)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(m => item.Author)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(m => item.ISBN)
+                                    </td>
+                                    <td>
+                                        <button asp-page-handler="Delete" asp-route-id="=@item.Id" onclick="return confirm('Are you sure you want to delete this post?')" class="btn btn-danger btn-sm text-white">Delete</button>
+                                        <a asp-page="Edit" asp-route-id="@item.Id" class="btn btn-success btn-sm">Edit</a>
+                                    </td>
+                                </tr>
+                            }
+
+                        </table>
                     }
+                    else
+                    {
+                        <p>No books available</p>
+                    }
+                </form>
+            </div>
+        </div>
+    *@
+    @*
+        <div class="col-12" style="text-align:center">
+            <br />
+            <span class="h3 text-info">OR</span>
+            <br /><br />
+        </div>
+    *@
+    <div class="col-12 border p-3">
 
-                </table>
-            }
-            else
-            {
-                <p>No books available</p>
-            }
-        </form>
+        <table id="DT_load" class="table table-striped table-bordered" style="width:100%">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th> Author</th>
+                    <th> ISBN</th>
+                    <th></th>
+                </tr>
+            </thead>
+        </table>
     </div>
-</div>
 
-<div class="col-12" style="text-align:center">
-    <br />
-    <span class="h3 text-info">OR</span>
-    <br /><br />
-</div>
-<div class="col-12 border p-3">
-
-    <table id="DT_load" class="table table-striped table-bordered" style="width:100%">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th> Author</th>
-                <th> ISBN</th>
-                <th></th>
-            </tr>
-        </thead>
-    </table>
-</div>
-
-@*Loading the table above with JavaScript*@
-@section Scripts{
-    <script src="~/js/bookList.js"></script>
-}
+    @*Loading the table above with JavaScript*@
+    @section Scripts{
+        <script src="~/js/bookList.js"></script>
+    }
